--- a/docs/index.qmd
+++ b/docs/index.qmd
@@ -2,6 +2,6 @@
 title: "site"
 ---
 
-This is a Quarto website.
+This is a Quarto website. 12
 
 To learn more about Quarto websites visit <https://quarto.org/docs/websites>.
