--- a/docs/index.qmd
+++ b/docs/index.qmd
@@ -1,7 +1,5 @@
 ---
-title: "site"
+title: "Visualisation des trajets en vélo dans la ville de Montpellier."
 ---
 
-This is a Quarto website. 12
-
-To learn more about Quarto websites visit <https://quarto.org/docs/websites>.
+Ici seront exposés les résultats principaux de nos travaux (cartes interactives et vidéo)
