test ajout d'images

--- a/docs/index.qmd
+++ b/docs/index.qmd
@@ -3,3 +3,7 @@ title: "Visualisation des trajets en vélo dans la ville de Montpellier."
 ---
 
 Ici seront exposés les résultats principaux de nos travaux (cartes interactives et vidéo)
+
+![](https://raw.githubusercontent.com/mscaia/PROJ_HAX712X/main/images/Figure_of_interest_.png){fig-align="center" width="80%"}
+
+![](https://raw.githubusercontent.com/mscaia/PROJ_HAX712X/main/images/Nbr_trajet_par_jour.png){fig-align="center" width="80%"}
