ajout menu déroulant

--- a/docs/index.qmd
+++ b/docs/index.qmd
@@ -7,3 +7,7 @@ Ici seront exposés les résultats principaux de nos travaux (cartes interactive
 ![](https://raw.githubusercontent.com/mscaia/PROJ_HAX712X/main/images/Figure_of_interest_.png){fig-align="center" width="80%"}
 
 ![](https://raw.githubusercontent.com/mscaia/PROJ_HAX712X/main/images/Nbr_trajet_par_jour.png){fig-align="center" width="80%"}
+
+```{python}
+# Lire et exécuter le fichier Python
+exec(open("C:/Users/CONDAMY Fabian/HAX712X/Projet_HAX712X/PROJ_HAX712X/statistique.py").read())
