--- a/docs/index.qmd
+++ b/docs/index.qmd
@@ -8,6 +8,14 @@ Ici seront exposés les résultats principaux de nos travaux (cartes interactive
 
 ![](https://raw.githubusercontent.com/mscaia/PROJ_HAX712X/main/images/Nbr_trajet_par_jour.png){fig-align="center" width="80%"}
 
+## Test importation fichier HTML
+
+<iframe src="./images/graphique_distance_jour.html" width="100%" height="600"></iframe>
+
+## Test Importation fichier Python
+
 ```{python}
-# Lire et exécuter le fichier Python
-exec(open("C:/Users/CONDAMY Fabian/HAX712X/Projet_HAX712X/PROJ_HAX712X/statistique.py").read())
+#| echo: false
+#| results: true
+exec(open("images/statistique.py").read())
+```
