--- a/docs/index.qmd
+++ b/docs/index.qmd
@@ -2,7 +2,9 @@
 title: "Visualisation des trajets en vélo dans la ville de Montpellier."
 ---
 
-Ici seront exposés les résultats principaux de nos travaux (cartes interactives et vidéo)
+## Carte des stations de vélos à Montpellier.
+
+<iframe src="./images/montpellier_bike_stations_map.html" width="100%" height="600"></iframe>
 
 ![](https://raw.githubusercontent.com/mscaia/PROJ_HAX712X/main/images/Figure_of_interest_.png){fig-align="center" width="80%"}
 
