--- a/docs/auteurs.qmd
+++ b/docs/auteurs.qmd
@@ -1,14 +1,25 @@
 ---
-title: "Auteurs"
+title: "Contributeurs"
 ---
 Projet réalisé par l'équipe suivante.
 
-## GROUPE
 
 ### 1. ARMAND Charlotte
 
+- [Mail]()
+- [Git](https://github.com/CharlotteARMAND)
+
 ### 2. CONDAMY Fabian
+
+- [Mail](fabian.condamy@etu.umontpellier.fr)
+- [Git](https://github.com/FabianCondamy)
 
 ### 3. SCAIA Matteo
 
+- [Mail]()
+- [Git](https://github.com/mscaia)
+
 ### 4. STETSUN Kateryna
+
+- [Mail]()
+- [Git](https://github.com/KatyaStetsun)
