--- a/docs/index.qmd
+++ b/docs/index.qmd
@@ -1,8 +1,18 @@
 ---
 title: "Visualisation des trajets en vélo dans la ville de Montpellier."
 ---
+## A propos
 
-## Carte des stations de vélos à Montpellier.
+CycleVision3 est un projet qui vise à décrire le trafic cycliste à Montpellier à travers l'analyse des quelques jeux de données suivants : 
+
+- [Trajets à vélos en libre-service](https://data.montpellier3m.fr/dataset/courses-des-velos-velomagg-de-montpellier-mediterranee-metropole)
+- [Comptages vélo et piéton issus des compteurs de vélo](https://data.montpellier3m.fr/dataset/comptages-velo-et-pieton-issus-des-compteurs-de-velo)
+- [OpenStreetMap](https://www.openstreetmap.org/#map=6/46.45/2.21)
+  
+Il s'agit principalement d'un projet de visualisation, avec des cartes (dont certaines sont interactives) et une vidéo. Les principaux projets sont disponibles dans l'onglet éponyme. 
+
+
+## Stations de vélos à Montpellier.
 
 <iframe src="./images/montpellier_bike_stations_map.html" width="100%" height="600"></iframe>
 
@@ -21,3 +31,6 @@ title: "Visualisation des trajets en vélo dans la ville de Montpellier."
 #| results: true
 exec(open("images/statistique.py").read())
 ```
+## Contact
+
+Pour toute question ou suggestion, n'hésitez pas à [nous contacter](auteurs.qmd).
