--- a/docs/projet1.qmd
+++ b/docs/projet1.qmd
@@ -2,4 +2,8 @@
 title: Projet 1
 ---
 
-Ci-dessous, une carte interactive 
+Ci-dessous, quelques éléments d'analyse des données.
+
+<iframe src="./images/graphique_distance_jour.html" width="100%" height="600"></iframe>
+
+Le graphique ci-dessus montre [...]
