--- a/docs/auteurs.qmd
+++ b/docs/auteurs.qmd
@@ -1,25 +1,53 @@
 ---
 title: "Contributeurs"
 ---
-Projet réalisé par l'équipe suivante.
 
+# MIT License
 
-### 1. ARMAND Charlotte
+© 2024 **Charlotte Armand**, **Fabian Condamy**, **Matteo Scaia**, **Kateryna Stetsun**
+
+---
+
+Permission is hereby granted, free of charge, to any person obtaining a copy of this software and associated documentation files (the “Software”), to deal in the Software without restriction, including without limitation the rights to:
+
+- Use
+- Copy
+- Modify
+- Merge
+- Publish
+- Distribute
+- Sublicense
+- And/or sell copies of the Software
+
+and to permit persons to whom the Software is furnished to do so, subject to the following conditions:
+
+> **The above copyright notice and this permission notice shall be included in all copies or substantial portions of the Software.**
+
+---
+
+### Disclaimer
+The software is provided **“as is”**, without warranty of any kind, express or implied, including but not limited to the warranties of merchantability, fitness for a particular purpose, and noninfringement. In no event shall the authors or copyright holders be liable for any claim, damages, or other liability, whether in an action of contract, tort, or otherwise, arising from, out of, or in connection with the software or the use or other dealings in the software.
+
+---
+
+## Authors
+
+- **ARMAND Charlotte**
 
 - [Mail]()
 - [Git](https://github.com/CharlotteARMAND)
 
-### 2. CONDAMY Fabian
+- **CONDAMY Fabian**
 
 - [Mail](fabian.condamy@etu.umontpellier.fr)
 - [Git](https://github.com/FabianCondamy)
 
-### 3. SCAIA Matteo
+- **SCAIA Matteo**
 
 - [Mail]()
 - [Git](https://github.com/mscaia)
 
-### 4. STETSUN Kateryna
+- **STETSUN Kateryna**
 
 - [Mail]()
 - [Git](https://github.com/KatyaStetsun)
