--- a/docs/auteurs.qmd
+++ b/docs/auteurs.qmd
@@ -1,5 +1,6 @@
 ---
 title: "Contributeurs"
+format: html
 ---
 
 # MIT License
@@ -34,7 +35,7 @@ The software is provided **“as is”**, without warranty of any kind, express 
 
 - **ARMAND Charlotte**
 
-- [Mail]()
+- [Mail](charlotte.armand@etu.umontpellier.fr)
 - [Git](https://github.com/CharlotteARMAND)
 
 - **CONDAMY Fabian**
@@ -44,10 +45,10 @@ The software is provided **“as is”**, without warranty of any kind, express 
 
 - **SCAIA Matteo**
 
-- [Mail]()
+- [Mail](matteo.scaia@etu.umontpellier.fr)
 - [Git](https://github.com/mscaia)
 
 - **STETSUN Kateryna**
 
-- [Mail]()
+- [Mail](kateryna.stetsun@etu.umontpellier.fr)
 - [Git](https://github.com/KatyaStetsun)
