--- a/docs/auteurs.qmd
+++ b/docs/auteurs.qmd
@@ -3,52 +3,53 @@ title: "Contributeurs"
 format: html
 ---
 
-# MIT License
+## Auteurs
+
+### **ARMAND Charlotte**
+- [Email](mailto:charlotte.armand@etu.umontpellier.fr)
+- [GitHub Profile](https://github.com/CharlotteARMAND)
+
+### **CONDAMY Fabian**
+- [Email](mailto:fabian.condamy@etu.umontpellier.fr)
+- [GitHub Profile](https://github.com/FabianCondamy)
+
+### **SCAIA Matteo**
+- [Email](mailto:matteo.scaia@etu.umontpellier.fr)
+- [GitHub Profile](https://github.com/mscaia)
+
+### **STETSUN Kateryna**
+- [Email](mailto:kateryna.stetsun@etu.umontpellier.fr)
+- [GitHub Profile](https://github.com/KatyaStetsun)
+
+---
+
+# Licence
+
+<details>
+<summary><strong>Cliquez pour voir la licence MIT</strong></summary>
 
 © 2024 **Charlotte Armand**, **Fabian Condamy**, **Matteo Scaia**, **Kateryna Stetsun**
 
 ---
 
-Permission is hereby granted, free of charge, to any person obtaining a copy of this software and associated documentation files (the “Software”), to deal in the Software without restriction, including without limitation the rights to:
+Par la présente, il est accordé, gratuitement, à toute personne obtenant une copie de ce logiciel et des fichiers de documentation associés (le « Logiciel »), le droit de traiter le Logiciel sans restriction, y compris, sans limitation, les droits suivants :
 
-- Use
-- Copy
-- Modify
-- Merge
-- Publish
-- Distribute
-- Sublicense
-- And/or sell copies of the Software
+- Utiliser
+- Copier
+- Modifier
+- Fusionner
+- Publier
+- Distribuer
+- Sous-licencier
+- Et/ou vendre des copies du Logiciel
 
-and to permit persons to whom the Software is furnished to do so, subject to the following conditions:
+et de permettre aux personnes auxquelles le Logiciel est fourni de le faire, sous réserve des conditions suivantes :
 
-> **The above copyright notice and this permission notice shall be included in all copies or substantial portions of the Software.**
-
----
-
-### Disclaimer
-The software is provided **“as is”**, without warranty of any kind, express or implied, including but not limited to the warranties of merchantability, fitness for a particular purpose, and noninfringement. In no event shall the authors or copyright holders be liable for any claim, damages, or other liability, whether in an action of contract, tort, or otherwise, arising from, out of, or in connection with the software or the use or other dealings in the software.
+> **L'avis de copyright ci-dessus et cet avis de permission doivent être inclus dans toutes les copies ou portions substantielles du Logiciel.**
 
 ---
 
-## Authors
+### Avertissement
+Le logiciel est fourni **"tel quel"**, sans garantie d'aucune sorte, expresse ou implicite, y compris mais sans se limiter aux garanties de qualité marchande, d'adaptabilité à un usage particulier et de non-contrefaçon. En aucun cas, les auteurs ou détenteurs de droits d'auteur ne pourront être tenus responsables de toute réclamation, dommage ou autre responsabilité, qu'elle soit dans le cadre d'un contrat, d'un délit ou autre, découlant de, ou en relation avec, le logiciel ou l'utilisation ou autres transactions dans le logiciel.
 
-- **ARMAND Charlotte**
-
-- [Mail](charlotte.armand@etu.umontpellier.fr)
-- [Git](https://github.com/CharlotteARMAND)
-
-- **CONDAMY Fabian**
-
-- [Mail](fabian.condamy@etu.umontpellier.fr)
-- [Git](https://github.com/FabianCondamy)
-
-- **SCAIA Matteo**
-
-- [Mail](matteo.scaia@etu.umontpellier.fr)
-- [Git](https://github.com/mscaia)
-
-- **STETSUN Kateryna**
-
-- [Mail](kateryna.stetsun@etu.umontpellier.fr)
-- [Git](https://github.com/KatyaStetsun)
+</details>
