--- a/slide/slide.qmd
+++ b/slide/slide.qmd
@@ -1,41 +1,118 @@
 ---
-title: "CycleVision3 Presentation" # The title of your presentation
-format: revealjs                   # Specifies the format for slides (Reveal.js is used for presentations)
+title: "Présentation CycleVision3"
+format: revealjs
 ---
 
-## Slide 1: Introduction
+## Slide 1 : Introduction
 
-- Welcome to CycleVision3
-- Overview of our project goals
-
-+++
-
-## Slide 2: Methodology
-
-1. Data Collection
-2. Analysis
-3. Visualization
+- Bienvenue à CycleVision3
+- Objectif principal : analyser et prévoir le trafic cycliste à Montpellier
+- Résumé rapide des données utilisées :
+  - VéloMagg : trajets en vélos partagés
+  - Comptage cyclistes et piétons
+  - Données géographiques d'Open Street Map
 
 +++
 
-## Slide 3: Results
+## Slide 2 : Aperçu du projet
 
-- Insights from data analysis
-- Traffic predictions and recommendations
-
-+++
-
-## Slide 4: Thank You & Questions
-
-- Thank you for your attention!
-- We look forward to your feedback.
-- Any questions?
+- **Contexte** : Pourquoi analyser le trafic cycliste ?
+  - Encourager les déplacements durables
+  - Soutenir les initiatives locales pour réduire les émissions
+- **Objectifs** :
+  - Visualiser les tendances de trafic
+  - Prédire les flux de circulation pour optimiser les trajets
 
 +++
 
-## Contact Us
+## Slide 3 : Analyse des réalisations
 
-- **Project Team CycleVision3**
-- Email: 
-- GitHub: [CycleVision3 Repository](https://github.com/mscaia/PROJ_HAX712X)
-- Website: [CycleVision3](https://mscaia.github.io/PROJ_HAX712X/)
+- **Collecte et préparation des données** :
+  - Extraction de données brutes depuis les bases VéloMagg et Open Street Map
+  - Nettoyage et formatage pour analyse
+- **Visualisation interactive** :
+  - Création de cartes de trafic (journalières, mensuelles)
+- **Prédiction du trafic** :
+  - Modèle de prévision pour estimer le trafic du lendemain
+
+*(Insérer des graphiques ou des captures d'écran des visualisations clés)*
+
++++
+
+## Slide 4 : Résultats des tests
+
+- **Processus de test** :
+  - Validation des prédictions du trafic : comparaison avec des données réelles
+  - Tests d'intégration : vérification du site interactif
+- **Résultats principaux** :
+  - Précision du modèle : *(Ajouter des statistiques ici, ex. précision à 85%)*
+
+*(Inclure un tableau ou un graphique montrant les résultats des tests)*
+
++++
+
+## Slide 5 : Problèmes rencontrés
+
+- **Défis principaux** :
+  - Qualité des données (valeurs manquantes, incohérences)
+  - Intégration technique des cartes interactives
+- **Solutions appliquées** :
+  - Imputation des données manquantes
+  - Simplification des calculs pour améliorer les performances
+
++++
+
+## Slide 6 : Contribution de l'équipe
+
+| Membre de l'équipe | Rôles et responsabilités |
+|---------------------|--------------------------|
+| **A**              | Collecte et nettoyage des données |
+| **B**              | Visualisation interactive |
+| **C**              | Modélisation et prédictions |
+| **D**              | Documentation et tests |
+
++++
+
+## Slide 7 : Comparaison : Planification vs Réalité
+
+- **Gantt prévu** :
+  *(Insérer une capture d'écran de la version initiale)*
+- **Gantt réel** :
+  *(Insérer une capture d'écran de la version finale)*
+- **Leçons apprises** :
+  - Ajustements nécessaires pour respecter les délais
+  - Importance de la flexibilité dans les projets collaboratifs
+
++++
+
+## Slide 8 : Améliorations futures
+
+- **Idées d'évolution** :
+  - Analyse de la corrélation entre pollution et trafic
+  - Développement d'une carte prenant en compte les travaux routiers
+  - Suggestions d'itinéraires alternatifs basées sur des données en temps réel
+
++++
+
+## Slide 9 : Démonstration du site web
+
+- Présentation des fonctionnalités principales :
+  - Cartes interactives du trafic
+  - Prédictions du trafic pour le lendemain
+- *(Insérer des captures d'écran ou planifier une démonstration en direct)*
+
++++
+
+## Slide 10 : Remerciements et questions
+
+- Merci pour votre attention !
+- Nous serons ravis de répondre à vos questions.
+
+---
+
+## Contactez-nous
+
+- **Équipe CycleVision3**
+- Email : *(Insérer une adresse email d'équipe)*
+- GitHub : [CycleVision3 Repository](https://github.com/mscaia/PROJ_HAX712X)
+- Site web : [CycleVision3](https://mscaia.github.io/PROJ_HAX712X/)
